src/styles/app.scss
$theme-colors: (
  "primary": #ffb800,
);

@import "../../node_modules/bootstrap/scss/bootstrap";

* {
  padding: 0;
  margin: 0;
}

.mh-100vh {
  min-height: 100vh;
}

.flex-1 {
  flex: 1;
}

.signin-img {
  background-image: url(https://images.pexels.com/photos/7245366/pexels-photo-7245366.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
}

.img-overlay {
  position: relative;
  background-image: url(../assets/signin.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 5px;
    bottom: 0;
    background-color: rgba($color: #000000, $alpha: 0.3);
  }
}

.eventBox {
  min-width: 260px;
  margin: " 10px 10px";
  overflow-y: hidden;
  position: relative;
  @media only screen and (max-width: 400px) {
    min-width: 38vh;
  }
}
td {
  vertical-align: middle;
}

.main-img-container {
  background-image: url("../assets/main-image-container.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  min-height: 500px;
  position: relative;
  &:before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba($color: #000000, $alpha: 0.7);
    z-index: 0;
  }
  .content {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    z-index: 1;
  }
}
.about-img-container {
  background-image: url("../assets/about-img.png");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 400px;
  position: relative;
  background-position: center;
  &:before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba($color: #000000, $alpha: 0.4);
    z-index: 0;
  }
}

// .scrollbar {
//   overflow: overlay;
// }

// /* total width */
// .scrollbar::-webkit-scrollbar {
//   background-color: rgba(0, 0, 0, 0);
//   width: 16px;
//   height: 16px;
//   z-index: 999999;
// }

// /* background of the scrollbar except button or resizer */
// .scrollbar::-webkit-scrollbar-track {
//   background-color: rgba(0, 0, 0, 0);
// }

// /* scrollbar itself */
// .scrollbar::-webkit-scrollbar-thumb {
//   background-color: rgba(0, 0, 0, 0);
//   border-radius: 16px;
//   border: 0px solid #fff;
// }

// /* set button(top and bottom of the scrollbar) */
// .scrollbar::-webkit-scrollbar-button {
//   display: none;
// }

// /* scrollbar when element is hovered */
// .scrollbar:hover::-webkit-scrollbar-thumb {
//   background-color: #a0a0a5;
//   border: 4px solid #fff;
// }

// /* scrollbar when scrollbar is hovered */
// .scrollbar::-webkit-scrollbar-thumb:hover {
//   background-color: #a0a0a5;
//   border: 4px solid #f4f4f4;
// }

